--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "apiretrieve",
   "version": "1.0.0",
+  "start": "node index.js",
   "main": "index.js",
+  "build": "echo 'No build step required'",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "node": "^23.7.0"
   }
 }
